--- a/EightyOne2.csproj
+++ b/EightyOne2.csproj
@@ -1,43 +1,54 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<TargetFramework>net35</TargetFramework>
-		<Title>81 Tiles 2</Title>
-		<AssemblyTitle>$(Title)</AssemblyTitle>
-		<Description>A Cities: Skylines mod.</Description>
-		<Authors>algernon</Authors>
-		<Copyright>Copyright © 2022 algernon</Copyright>
-		<Product>$(Title)</Product>
-		<Version>0.9.8</Version>
-		<ManagedDLLPath>$(MSBuildProgramFiles32)/Steam/steamapps/common/Cities_Skylines/Cities_Data/Managed</ManagedDLLPath>
-		<AssemblySearchPaths>
-			$(AssemblySearchPaths);
-			$(ManagedDLLPath)
-		</AssemblySearchPaths>
-		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-	</PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="CitiesHarmony.API" Version="2.1.0" />
-		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<Reference Include="Assembly-CSharp" />
-		<Reference Include="ColossalManaged" />
-		<Reference Include="ICities" />
-		<Reference Include="UnityEngine" />
-	</ItemGroup>
-	<ItemGroup>
-		<_Translations Include="$(ProjectDir)/Translations/*.csv" />
-		<_TranslationsCore Include="../AlgernonCommons/Translations/*.csv" />
-	</ItemGroup>
-	<Target Name="DeployToModDirectory" AfterTargets="Build">
-		<PropertyGroup>
-			<DeployDir>$(LOCALAPPDATA)/Colossal Order/Cities_Skylines/Addons/Mods/$(SolutionName)/</DeployDir>
-		</PropertyGroup>
-		<Copy SourceFiles="$(TargetPath)" DestinationFolder="$(DeployDir)" />
-		<Copy SourceFiles="$(TargetDir)/CitiesHarmony.API.dll" DestinationFolder="$(DeployDir)" />
-		<Copy SourceFiles="@(_Translations)" DestinationFolder="$(DeployDir)/Translations" />
-		<Copy SourceFiles="@(_TranslationsCore)" DestinationFolder="$(DeployDir)/Translations/Core" />
-	</Target>
-	<Import Project="..\AlgernonCommons\AlgernonCommonsPatchingShared.projitems" Label="Shared" />
+  <PropertyGroup>
+    <TargetFramework>net35</TargetFramework>
+    <Title>81 Tiles 2</Title>
+    <AssemblyTitle>$(Title)</AssemblyTitle>
+    <Description>A Cities: Skylines mod.</Description>
+    <Authors>algernon</Authors>
+    <Copyright>Copyright © 2022 algernon</Copyright>
+    <Product>$(Title)</Product>
+    <Version>0.9.8</Version>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+  </PropertyGroup>
+
+  <!-- Path to managed DLLs -->
+  <PropertyGroup>
+    <ManagedDLLPath>$(MSBuildProgramFiles32)/Steam/steamapps/common/Cities_Skylines/Cities_Data/Managed</ManagedDLLPath>
+  </PropertyGroup>
+
+  <!-- Add DLL path to search paths for references -->
+  <PropertyGroup>
+    <AssemblySearchPaths>$(AssemblySearchPaths);$(ManagedDLLPath)</AssemblySearchPaths>
+  </PropertyGroup>
+
+  <!-- Project dependencies -->
+  <ItemGroup>
+    <PackageReference Include="CitiesHarmony.API" Version="2.1.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <Reference Include="Assembly-CSharp" />
+    <Reference Include="ColossalManaged" />
+    <Reference Include="ICities" />
+    <Reference Include="UnityEngine" />
+  <!-- Translation files -->
+  <ItemGroup>
+    <_Translations Include="$(ProjectDir)/Translations/*.csv" />
+    <_TranslationsCore Include="../AlgernonCommons/Translations/*.csv" />
+  </ItemGroup>
+
+  <!-- Deployment -->
+  <Target Name="DeployToModDirectory" AfterTargets="Build">
+    <PropertyGroup>
+      <DeployDir>$(LOCALAPPDATA)/Colossal Order/Cities_Skylines/Addons/Mods/$(SolutionName)/</DeployDir>
+    </PropertyGroup>
+    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(DeployDir)" />
+    <Copy SourceFiles="$(TargetDir)/CitiesHarmony.API.dll" DestinationFolder="$(DeployDir)" />
+    <Copy SourceFiles="@(_Translations)" DestinationFolder="$(DeployDir)/Translations" />
+    <Copy SourceFiles="@(_TranslationsCore)" DestinationFolder="$(DeployDir)/Translations/Core" />
+  </Target>
+
+  <!-- Import shared patching configuration -->
+  <Import Project="..\AlgernonCommons\AlgernonCommonsPatchingShared.projitems" Label="Shared" />
 </Project>
